--- a/app/views/ideas/edit.html.erb
+++ b/app/views/ideas/edit.html.erb
@@ -1,12 +1,3 @@
-<% content_for :title, "Editing idea" %>
-
-<h1>Editing idea</h1>
-
+<h1>Modifier l'idée</h1>
 <%= render "form", idea: @idea %>
-
-<br>
-
-<div>
-  <%= link_to "Show this idea", @idea %> |
-  <%= link_to "Back to ideas", ideas_path %>
-</div>
+<%= link_to "Retour", idea_path(@idea), class: "btn btn-secondary" %>
