--- a/app/views/ideas/new.html.erb
+++ b/app/views/ideas/new.html.erb
@@ -1,11 +1,3 @@
-<% content_for :title, "New idea" %>
-
-<h1>New idea</h1>
-
+<h1>Nouvelle idée</h1>
 <%= render "form", idea: @idea %>
-
-<br>
-
-<div>
-  <%= link_to "Back to ideas", ideas_path %>
-</div>
+<%= link_to "Retour", ideas_path, class: "btn btn-secondary" %>
