--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -1,10 +1,11 @@
-<p style="color: green"><%= notice %></p>
+<h1><%= @idea.title %></h1>
+<p><%= @idea.description %></p>
 
-<%= render @idea %>
+<p><strong>Proposé par :</strong> <%= @idea.user.username %></p>
 
-<div>
-  <%= link_to "Edit this idea", edit_idea_path(@idea) %> |
-  <%= link_to "Back to ideas", ideas_path %>
+<% if policy(@idea).update? %>
+  <%= link_to "Modifier", edit_idea_path(@idea), class: "btn btn-primary" %>
+  <%= link_to "Supprimer", idea_path(@idea), method: :delete, data: { confirm: "Es-tu sûr ?" }, class: "btn btn-danger" %>
+<% end %>
 
-  <%= button_to "Destroy this idea", @idea, method: :delete %>
-</div>
+<%= link_to "Retour", ideas_path, class: "btn btn-secondary" %>
